[package]
name = "rpte"
version = "0.0.1"
edition = "2024"
description = "Rust Perpetual Trading Engine — A node-based perpetual trading simulation engine"
keywords = ["trading", "engine", "perpetual", "simulation", "order-book"]
categories = ["simulation", "game-development"]
license = "MIT"
repository = "https://github.com/Chaiminit/rpte"
readme = "README.md"

[dependencies]
rust_decimal = "1.36"
chrono = "0.4"

[dev-dependencies]
rand = "0.8"
